k8s/default/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client
spec:
    replicas: 2
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: mtttia/client:latest
                  imagePullPolicy: "Always"
                  resources:
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
                      requests:
                          memory: "128Mi"
                          cpu: "125m"
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: client-service
spec:
    selector:
        app: client
    ports:
        - port: 80
          targetPort: 80
    type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: client.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
