k8s/default/phpmyadmin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: phpmyadmin
spec:
    replicas: 1
    selector:
        matchLabels:
            app: phpmyadmin
    template:
        metadata:
            labels:
                app: phpmyadmin
        spec:
            containers:
                - name: phpmyadmin
                  image: phpmyadmin/phpmyadmin:latest
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "125m"
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: phpmyadmin-service
spec:
    selector:
        app: phpmyadmin
    ports:
        - port: 80
          targetPort: 80
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: phpmyadmin-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - host: phpmyadmin.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: phpmyadmin-service
                            port:
                                number: 80
